--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <div class="container">
+    < class="container">
         <!-- Header Section -->
         <header id="header" class="header">
             <nav class="menu-case">
@@ -122,75 +122,84 @@
                     <h2 class="-h2-case">
                         print&nbsp;your&nbsp;life in&nbsp;a simple&nbsp;photo get&nbsp;started
                     </h2>
-                </div>
-                <div class="pushhh">
                     <div class="get-btn">
-                        <a class="button" href="#">GET STARTED</a>
+                        <a class="button" href="http://google.com/" target="_blank">GET STARTED</a>
                     </div>
-                    <div class="social">
-                        <a class="fa fa-twitter" href="http://twitter.com/"></a>
-                        <a class="fa fa-flickr" href="https://www.flickr.com/"></a>
-                        <a class="fa fa-dribbble" href="https://dribbble.com/"></a>
-                    </div>
+                </div>
+                <div class="social">
+                    <a class="sc-logo" href="http://twitter.com/" target="_blank"><img src="/img/ico-twitter.svg" width="25" height="25" alt="twitter"></a>
+                    <a class="sc-logo" href="https://www.flickr.com/" target="_blank"><img src="/img/ico-flickr.png" width="25" height="25" alt="flickr"></a>
+                    <a class="sc-logo" href="https://dribbble.com/" target="_blank"><img src="/img/ico-dribbble.svg" width="25" height="25" alt="dribbble"></a>
                 </div>
             </section>
-            <!-- Present Sub-section -->
+            <!-- Present Sub-section
             <section id="present" class="present">
                 <h3>
-
+                    Rappresent your life with a simple photo
                 </h3>
                 <p>
-
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                    sed do eiusmod tempor incididunt ut labore et dolore 
+                    magna aliqua. Ut enim ad minim veniam, quis 
+                    nostrud exercitation ullamco laboris nisi 
+                    ut aliquip ex ea commodo consequat.
                 </p>
                 <link rel="stylesheet" href="#">
             </section>
             <!-- Design Sub-section -->
-            <section id="design" class="design">
+            <!-- <section id="design" class="design">
                 <h3>
-
+                    DESIGN
                 </h3>
                 <p>
-
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                    sed do eiusmod tempor incididunt ut labore et dolore 
+                    magna aliqua. Ut enim ad minim veniam, quis 
+                    nostrud exercitation ullamco laboris nisi 
+                    ut aliquip ex ea commodo consequat.
                 </p>
-                <link rel="stylesheet" href="#">
-            </section>
+                <link rel="stylesheet" href="#">learn more 01/05
+            </section> -->
             <!-- Gallery Sub-section -->
-            <section id="galery" class="galery">
+            <!-- <section id="galery" class="galery">
                 <h3>
-
+                    our community
                 </h3>
                 <p>
-
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit
                 </p>
 
-            </section>
+            </section> -->
             <!-- Comunity Sub-section -->
-            <section id="community" class="community">
+            <!-- <section id="community" class="community">
                 <h4>
-
+                    subscribe to us community
                 </h4>
                 <p>
-
+                    your email
                 </p>
                 <link rel="stylesheet" href="#">
-
-            </section>
+            </section> -->
             <!-- Dwnload Sub-section -->
-            <section id="download" class="download">
+            <!-- <section id="download" class="download">
                 <h4>
-
+                    Download it
                 </h4>
                 <p>
-
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                    Ut enim ad minim veniam, quis nostrud exercitation ullamco 
+                    laboris nisi ut aliquip ex ea commodo consequat.
                 </p>
-                <link rel="stylesheet" href="#">
-                <link rel="stylesheet" href="#">
-            </section>
+                <link rel="stylesheet" href="#">apple store	https://apps.apple.com/
+                <link rel="stylesheet" href="#">play store	https://play.google.com/
+            </section> -->
         </main>
         <!-- Foter Section -->
-        <footer>
-
-        </footer>
+        <!-- <footer>
+            credits | privacy | our teams
+            &copy;  Copyright by phototime - all right reserved
+        </footer> -->
     </div>
 </body>
 </html>
