--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    < class="container">
+    <div class="container">
         <!-- Header Section -->
         <header id="header" class="header">
             <nav class="menu-case">
