--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 </div>
                 <div class="social">
                     <a class="sc-logo" href="http://twitter.com/" target="_blank"><img src="/img/ico-twitter.svg" width="25" height="25" alt="twitter"></a>
-                    <a class="sc-logo" href="https://www.flickr.com/" target="_blank"><img src="/img/ico-flickr.png" width="25" height="25" alt="flickr"></a>
+                    <a class="sc-logo" href="https://www.flickr.com/" target="_blank"><img src="/img/ico-flickr.svg" width="25" height="25" alt="flickr"></a>
                     <a class="sc-logo" href="https://dribbble.com/" target="_blank"><img src="/img/ico-dribbble.svg" width="25" height="25" alt="dribbble"></a>
                 </div>
             </section>
