--- a/index.html
+++ b/index.html
@@ -127,9 +127,56 @@
                     </div>
                 </div>
                 <div class="social">
-                    <a class="sc-logo" href="http://twitter.com/" target="_blank"><img src="/img/ico-twitter.svg" width="25" height="25" alt="twitter"></a>
-                    <a class="sc-logo" href="https://www.flickr.com/" target="_blank"><img src="/img/ico-flickr.svg" width="25" height="25" alt="flickr"></a>
-                    <a class="sc-logo" href="https://dribbble.com/" target="_blank"><img src="/img/ico-dribbble.svg" width="25" height="25" alt="dribbble"></a>
+                    <a class="sc-logo" href="http://twitter.com/" target="_blank">
+                        <svg xmlns="http://www.w3.org/2000/svg"
+                             xmlns:xlink="http://www.w3.org/1999/xlink"
+                             x="0px" y="0px"
+                             width="23px"
+                             height="20px"
+                             viewBox="0 0 23 20"
+                             xml:space="preserve">
+
+                            <path class="twit-ico"
+                            d="M23,2.4c-0.9,0.4-1.8,0.7-2.7,0.8c1-0.6,1.7-1.6,2.1-2.8c-0.9,0.6-1.9,1-3,1.2
+                            C18.5,0.6,17.3,0,16,0c-2.7,0.1-4.8,2.4-4.7,5c0,0.4,0,0.8,0.1,1.2C7.5,6,3.9,4,1.6,0.9C1.2,1.7,1,2.6,1,3.5c0,1.7,0.8,3.2,2.1,4.2
+                            C2.3,7.6,1.6,7.4,0.9,7v0.1c-0.1,2.3,1.5,4.4,3.8,5c-0.4,0.1-0.8,0.2-1.2,0.2c-0.3,0-0.6,0-0.9-0.1c0.6,2,2.3,3.4,4.4,3.5
+                            c-2,1.6-4.5,2.3-7,2C2.1,19.2,4.6,20,7.2,20c8.7,0,13.4-7.7,13.4-14.4c0-0.2,0-0.4,0-0.7C21.6,4.3,22.4,3.4,23,2.4z"/>
+                        </svg>
+                    </a>
+                    <a class="sc-logo" href="https://www.flickr.com/" target="_blank">
+                        <svg xmlns="http://www.w3.org/2000/svg"
+                             xmlns:xlink="http://www.w3.org/1999/xlink"
+                             x="0px"
+                             y="0px"
+                             width="23px"
+                             height="20px"
+                             viewBox="0 0 23 20"
+                             xml:space="preserve">
+                             <path class="flik-ico"
+                             d="M18.7,0H4.3C2.1-0.1,0.2,1.5,0,3.8v12.5c0.2,2.2,2.1,3.9,4.3,3.8h14.4c2.2,0.1,4.1-1.5,4.3-3.8
+                             V3.8C22.8,1.5,20.9-0.1,18.7,0z M10.5,10c0.2,1.8-1,3.4-2.7,3.6c-1.8,0.2-3.4-1-3.6-2.7C4,9.1,5.2,7.5,6.9,7.3c0.1,0,0.3,0,0.4,0
+                             C8.9,7.1,10.3,8.4,10.5,10z M18.9,10c0.2,1.8-1,3.4-2.7,3.6c-1.8,0.2-3.4-1-3.6-2.7c-0.2-1.8,1-3.4,2.7-3.6c0.1,0,0.3,0,0.4,0
+                             C17.4,7.1,18.8,8.4,18.9,10L18.9,10z"/>
+                        </svg>
+                    </a>
+                    <a class="sc-logo" href="https://dribbble.com/" target="_blank">
+                        <svg xmlns="http://www.w3.org/2000/svg"
+                             xmlns:xlink="http://www.w3.org/1999/xlink"
+                             x="0px" y="0px"
+                             width="20px"
+                             height="20px"
+                             viewBox="0 0 20 20"
+                             xml:space="preserve">
+                             <path class="drib-ico" d="M13.3,17.8c-2.9,1.3-6.4,0.8-8.8-1.3c0,0,0.1,0.1,0.2,0.1c1.6-3.7,6.7-5.6,6.7-5.6s0,0,0.1,0
+                             C12.3,13.2,12.9,15.4,13.3,17.8z M10.9,9.5c-0.1,0-0.2,0.1-0.3,0.1c-2.9,1.1-5.4,3.2-6.9,5.9l0,0c-1.4-1.7-2.2-3.8-2.2-6
+                             c0-0.1,0-0.2,0-0.3c3,0,5.9-0.4,8.8-1.3C10.5,8.5,10.7,9,10.9,9.5z M9.5,6.6C7,7.3,4.3,7.6,1.7,7.7C2.2,5,4,2.7,6.4,1.5
+                             C7.5,3.1,8.6,4.8,9.5,6.6L9.5,6.6z M18.4,10.9c-0.4,2.4-1.7,4.6-3.7,6c-0.4-2.2-0.9-4.3-1.7-6.4C14.9,10.3,16.7,10.4,18.4,10.9
+                             L18.4,10.9z M8,0.8C8,0.8,7.9,0.8,8,0.8C7.9,0.8,8,0.8,8,0.8z M15.6,2.8C14.5,4.3,13,5.4,11.2,6c-0.9-1.8-2-3.6-3.2-5.2
+                             C10.7,0.1,13.6,0.9,15.6,2.8L15.6,2.8z M18.5,9.4c-2-0.4-4-0.5-5.9-0.3c-0.1-0.1-0.1-0.3-0.2-0.5c-0.2-0.4-0.4-0.9-0.6-1.3
+                             c1.9-0.7,3.5-2,4.8-3.5C17.8,5.4,18.5,7.4,18.5,9.4L18.5,9.4z M20,9.5C19.7,4,15-0.3,9.5,0S-0.3,5,0,10.5C0.3,15.8,4.7,20,10,20
+                             C15.7,19.9,20.1,15.2,20,9.5z"/>
+                        </svg>
+                    </a>
                 </div>
             </section>
             <!-- Present Sub-section
