--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Blinker:wght@200;300;400;600;700;800&family=Fredericka+the+Great&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="./css/slimselect.css">
         <link rel="stylesheet" type="text/css" href="./css/controls.css">
-        <link rel="stylesheet" type="text/css" href="css/32_2.css">
+        <link rel="stylesheet" type="text/css" href="./css/32_2.css">
         <title>JavaScript 32</title>
     </head>
 
