--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
         <link href="https://fonts.googleapis.com/css2?family=Blinker:wght@200;300;400;600;700;800&family=Fredericka+the+Great&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
 
-        <link rel="stylesheet" href="/lesson_32/css/slimselect.css">
-        <link rel="stylesheet" href="/lesson_32/css/justifiedGallery.css" />
-        <link rel="stylesheet" type="text/css" href="/lesson_32/css/controls.css">
-        <link rel="stylesheet" type="text/css" href="/lesson_32/css/32_2.css">
+        <link rel="stylesheet" href="./css/slimselect.css">
+        <link rel="stylesheet" href="./css/justifiedGallery.css" />
+        <link rel="stylesheet" type="text/css" href="./css/controls.css">
+        <link rel="stylesheet" type="text/css" href="./css/32_2.css">
 
         <title>JavaScript 32</title>
     </head>
@@ -189,8 +189,8 @@
         </div>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-        <script src="/lesson_32/js/slimselect.js"></script>
-        <script src="/lesson_32/js/jquery.justifiedGallery.js"></script>
-        <script src="/lesson_32/js/32_2.js"></script>
+        <script src="./js/slimselect.js"></script>
+        <script src="./js/jquery.justifiedGallery.js"></script>
+        <script src="./js/32_2.js"></script>
     </body>
 </html>
